@@ -1,3 +1,7 @@
+2011-02-22  Tobias Liebig  <mail_typo3@etobi.de>
+
+	* Fixed bug #17653: t3editor: wrong size calculation in Chrome for the code completion window (Thanks to Stephan Petzl)
+
 2011-02-22  Jigal van Hemert  <jigal@xs4all.nl>
 
 	* Fixed bug #17518: Content type "mailform" no longer accepts list of addresses for "Recipient List" (also fixed function description in t3lib_mail_SwiftMailerAdapter)	
